# aiautomouse

./: .gitignore  README.md  USER_GUIDE_KO.md  architecture.md  pyproject.toml  requirements.txt
assets/snippets/: hello.txt  nano banana.txt  prompt_01.txt  signature.txt
assets/templates/: done_icon.template.json  upload_button.template.json
config/: app.json  app.yaml  hotkeys.yaml
macros/packs/portable_demo/: README.md  manifest.json
macros/samples/: browser_playwright_data_url.json  browser_search_cdp.yaml  calculator_click_button.yaml  conditional_submit.json  focus_and_paste.json  image_click_retry.json  notepad_insert_snippet.yaml  screen_find_text_ocr.yaml  upload_and_submit.json
myenv/Scripts/: activate  activate.bat
packaging/: aiautomouse.spec  build_portable.ps1
packaging/hooks/: hook-torch.py
schemas/: macro.schema.json
src/aiautomouse/: __init__.py  __main__.py  app.py  cli.py
src/aiautomouse/authoring/: __init__.py  converter.py  models.py
src/aiautomouse/gui/: app.py  (+3 more)
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/data/: sample.txt
tests/integration/: test_browser_cdp_macro.py  test_calculator_macro.py  test_mock_desktop_targets.py  test_notepad_macro.py  test_ocr_macro.py
tests/unit/: test_authoring.py  test_browser_adapter.py  test_coordinate_math.py  test_dry_run.py  test_loader.py  test_ocr_provider.py  test_packaging_hooks.py  test_resolver_order.py  test_resolver_timeout.py  test_runner_retry.py  test_save_settings_identity.py  test_schema.py  test_settings_persistence.py  test_template_match.py  test_workspace.py
(+42 files in other folders)
